<resources>
    <string name="app_name">AT-interfaces-a</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_informacoes">Informações pessoais</string>
    <string name="menu_formacao">Formação</string>
    <string name="menu_Experiencia">Experiencias Profissionais</string>
    <string name="menu_cursos">Cursos</string>
    <string name="menu_publicações">Publicações</string>

    <string name="cadastro_nome">Nome</string>
    <string name="cadastro_endereço">Endereço</string>
    <string name="cadastro_estado">Estado</string>
    <string name="cadastro_cidade">Cidade</string>
    <string name="cadastro_telefone">Telefone</string>
    <string name="cadastro_Email">Email</string>

    <string name="perfil_nome">Nome</string>
    <string name="perfil_idade">Idade</string>
    <string name="perfil_Email">Email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>