<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_informacoes"
            android:title="@string/menu_informacoes" />
        <item
            android:id="@+id/nav_formacao"
            android:title="@string/menu_formacao" />
        <item
            android:id="@+id/nav_experiencia"
            android:title="@string/menu_Experiencia" />
        <item
            android:id="@+id/nav_cursos"
            android:title="@string/menu_cursos" />
        <item
            android:id="@+id/nav_publicacoes"
            android:title="@string/menu_publicações" />
    </group>
</menu>