<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.infnet.at_interfaces_a.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_informacoes"
        android:name="com.infnet.at_interfaces_a.ui.informacoesPessoais.InformacoesFragment"
        android:label="@string/menu_informacoes"
        tools:layout="@layout/fragment_informacoes" />

    <fragment
        android:id="@+id/nav_formacao"
        android:name="com.infnet.at_interfaces_a.ui.formacao.FormacaoFragment"
        android:label="@string/menu_formacao" />
    <fragment
        android:id="@+id/nav_experiencia"
        android:name="com.infnet.at_interfaces_a.ui.experiencia.ExperienciaFragment"
        android:label="@string/menu_Experiencia" />
    <fragment
        android:id="@+id/nav_cursos"
        android:name="com.infnet.at_interfaces_a.ui.cursos.CursoFragment"
        android:label="@string/menu_cursos"
        tools:layout="@layout/fragment_curso" />
    <fragment
        android:id="@+id/nav_publicacoes"
        android:name="com.infnet.at_interfaces_a.ui.publicacoes.PublicacaoFragment"
        android:label="@string/menu_publicações" />
</navigation>