<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="344dp"
        android:layout_height="374dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.106" >

        <EditText
            android:id="@+id/txtNome"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="10"
            android:hint="@string/cadastro_nome"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/Telefone"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="10"
            android:hint="@string/cadastro_telefone"
            android:inputType="phone" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="10"
            android:hint="@string/cadastro_endereço"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/txtEndereco"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="10"
            android:hint="@string/cadastro_Email"
            android:inputType="textPostalAddress" />

        <AutoCompleteTextView
            android:id="@+id/txtCidade"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/cadastro_cidade" />

        <AutoCompleteTextView
            android:id="@+id/txtEstado"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/cadastro_estado" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>